--- a/index.html
+++ b/index.html
@@ -388,6 +388,12 @@
 <br>
 190. <a href="https://musiclab.chromeexperiments.com/Kandinsky/">Musiclab</a>
 <br>
+191. <a href="https://github.com/ravana69/norbertkehrer.github.io/">Emulator Music Player</a>
+<br>
+192. <a href="https://manyland.com/">Manyland</a>
+<br>
+193. <a href="https://ravana69.github.io/Polytomizator/">Polytomizator</a>
+<br>
 <b>=================================================================</b>
 </ul>
   <embed name="GoodEnough" src="manase.mp3" loop="true" hidden="true" autostart="true">
