--- a/index.html
+++ b/index.html
@@ -394,6 +394,8 @@
 <br>
 193. <a href="https://ravana69.github.io/Polytomizator/">Polytomizator</a>
 <br>
+194. <a href="https://ravana69.github.io/pixelthought/">Pixel Thoughtolytomizator</a>
+<br>
 <b>=================================================================</b>
 </ul>
 <script>
